# Blake3.lean

./: .gitignore  Blake3.lean  Blake3Test.lean  DebugTest.lean  Main.lean  README.md  blake3.nix  ffi.c  flake.nix  lake-manifest.json  lakefile.lean  leanpkg.toml  rust-toolchain.toml
.github/workflows/: ci.yml  nix.yml
Blake3/: C.lean  Rust.lean
c/: blake3-shim.c  default.nix  lean-blake3.c  lib.nix
rust/: Cargo.toml
rust/src/: lib.rs
src/: BinaryTools.lean  Blake3.lean
src/Blake3/: BinaryTools.lean  Native.lean  Pure.lean
test/Tests/: HashString.lean
tests/: Tests.lean
tests/Tests/: HashString.lean
