# Declare our own workspace so Cargo doesn't auto-include this crate in a
# downstream workspace when Lake materializes the package under `.lake/`.
[workspace]

[package]
name = "blake3-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
blake3 = "1.8.4"
lean-ffi = { git = "https://github.com/argumentcomputer/lean-ffi", rev = "cc98ebf67bf453ac3827cb767f78b13ea674dd6a" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
